Tighten AbstractWorker and subclasses a bit. <https://webkit.org/b/122402>

Reviewed by Darin Adler.

- Make the Worker and SharedWorker classes final.
- Have constructors take ScriptExecutionContext by reference.
- Remove unnecessary AbstractWorker::contextDestroyed() override.
- Make eventTargetInterface() inline.

Inlining eventTargetInterface() is quite neat - since we only ever
call this on tightly typed pointers from generated code, combining
final and inline turns the virtual call into a compile-time constant.

Canonical link: https://commits.webkit.org/140477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157000 268f45cc-cd09-0410-ab3c-d52691b4dbfc