Source/WebCore/bindings/js/JSSharedWorkerCustom.cpp
@@ -74,7 +74,8 @@ EncodedJSValue JSC_HOST_CALL JSSharedWorkerConstructor::constructJSSharedWorker(
     // FIXME: We need to use both the dynamic scope and the lexical scope (dynamic scope for resolving the worker URL)
     DOMWindow* window = asJSDOMWindow(exec->lexicalGlobalObject())->impl();
     ExceptionCode ec = 0;
-    RefPtr<SharedWorker> worker = SharedWorker::create(window->document(), scriptURL, name, ec);
+    ASSERT(window->document());
+    RefPtr<SharedWorker> worker = SharedWorker::create(*window->document(), scriptURL, name, ec);
     if (ec) {
         setDOMException(exec, ec);
         return JSValue::encode(JSValue());
